# road-rs

./: .gitignore  Cargo.toml  README.md  flake.nix
road-examples/: Cargo.toml
road-examples/src/: main.rs
road-macros/: Cargo.toml
road-macros/src/: lib.rs  old-async.rs
road-plugins/: Cargo.toml
road-plugins-dynamic/hyprland/: Cargo.toml
road-plugins-dynamic/hyprland/src/: lib.rs
road-plugins-dynamic/sway/: Cargo.toml
road-plugins-dynamic/sway/src/: lib.rs
road-plugins/src/: hypr.rs  lib.rs  sway.rs
road-rs/: Cargo.toml
road-rs/src/: lib.rs
road-types/: Cargo.toml
road-types/src/: lib.rs
src/: lib.rs
