[package]
name = "road-examples"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-std = { version = "1", features = ["attributes", "unstable"]}
road-rs = { path = "../road-rs/" }
road-macros = { path = "../road-macros/" }
async-ffi = { version = "0.4.1", features = ["abi_stable", "macros"] }
