[package]
name = "road-macros"
version = "0.1.0"
edition = "2021"
metadata.nix.build = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
proc-macro = true

[dependencies]
road-types = { path = "../road-types" }
abi_stable = "0.11"
async-ffi = { version = "0.4.1", features = ["abi_stable"] }
syn = "1"
quote = "1"
