[package]
name = "road-plugins"
version = "0.1.0"
edition = "2021"
metadata.nix.build = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
abi_stable = "0.11"
road-types = { path = "../road-types" }
road-macros = { path = "../road-macros" }
hyprland = { git = "https://github.com/hyprland-community/hyprland-rs.git", optional = true }

[features]
default = ["hyprland"]
hyprland = ["dep:hyprland"]
