[package]
name = "road-plugins"
version = "0.1.0"
edition = "2021"
metadata.nix.build = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
abi_stable = "0.11"
road-types = { path = "../road-types" }
road-macros = { path = "../road-macros" }
hyprland = { path = "../../hyprland-rs/", optional = true, features = ["async-std", "data", "listener"], default-features = false }
		#git = "https://github.com/hyprland-community/hyprland-rs.git", 

swayipc = { optional = true }
swayipc-async = { optional = true }
lazy_static = "1.4"
async-ffi = { version = "0.4.1", features = ["abi_stable", "macros"] }
#futures = "0.3"


[features]
default = ["hyprland", "sway"]
hyprland = ["dep:hyprland"]
sway = ["dep:swayipc", "dep:swayipc-async"]
