[package]
name = "road-plugin-sway-dylib"
version = "0.1.0"
edition = "2021"
crate-type = "cdylib"
metadata.nix.build = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "swayipc_road_plugin"
crate-type = ["cdylib", 'rlib']

[dependencies]
abi_stable = "0.11"
road-types = { path = "../../road-types" }
road-plugins = { path = "../../road-plugins" }
